# ink

./: CHANGELOG.md  Cargo.toml
.github/workflows/: ci.yml
crates/e2e/sandbox/src/: macros.rs
crates/e2e/sandbox/src/api/: revive_api.rs
crates/e2e/src/: backend.rs  backend_calls.rs  contract_results.rs  lib.rs  sandbox_client.rs  subxt_client.rs
crates/env/src/: api.rs  backend.rs
crates/env/src/engine/off_chain/: impls.rs  test_api.rs
crates/env/src/engine/on_chain/: buffer.rs  pallet_revive.rs
crates/ink/: Cargo.toml
crates/metadata/src/: specs.rs
crates/primitives/src/: lib.rs
crates/storage/src/lazy/: mapping.rs
integration-tests/internal/mapping/: lib.rs
integration-tests/public/contract-storage/: e2e_tests.rs  lib.rs
integration-tests/public/contract-transfer/: Cargo.toml
integration-tests/public/runtime-call-contract/: Cargo.toml
integration-tests/solidity-abi/solidity-calls-flipper/: e2e_tests.rs
linting/: Cargo.toml
linting/extra/: Cargo.toml
linting/mandatory/: Cargo.toml
linting/utils/src/: lib.rs
scripts/: for_all_contracts_exec.sh  for_all_contracts_exec2.sh  is_contract.sh
