[workspace]
resolver = "2"
members = [
    "mandatory",
    "extra",
    "utils",
]

[workspace.package]
version = "6.0.0-alpha.1"
authors = ["Use Ink <ink@use.ink>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/use-ink/ink"
homepage = "https://use.ink"
keywords = ["ink", "blockchain", "edsl", "dylint", "linting"]

[workspace.dependencies]
ink_linting_utils = { version = "=6.0.0-alpha.1", path = "utils" }

[patch.'https://github.com/paritytech/polkadot-sdk']
substrate-prometheus-endpoint = { git = "https://github.com/use-ink/polkadot-sdk", branch = "hotfix-tokio-deps" }

[workspace.metadata.dylint]
libraries = [
    { path = "mandatory" },
    { path = "extra" },
]
